# lv_1

./: Cargo.toml  PI.MD  README.md  b.sh  lv_conf.h  lv_drv_conf.h  mac.sh  macos_report.txt  pi.sh  redis.yaml  setup.sh  short.sh  sync.sh
.cargo/: config.toml
lv_gtk/: lv_conf.h  lv_drv_conf.h
lv_pi/: lv_conf.h  lv_drv_conf.h
lv_sdl/: lv_conf.h  lv_drv_conf.h
src/: .redis.yaml.swp  main.rs  pipes.cpp  pub_message.rs  redis.yaml  redis_receiver.rs  sample.cpp  view.rs
src/vc/: message.rs  mod.rs  style_builder.rs  vc_label.rs  view.rs
