[package]
name = "lv_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lvgl = { git = "https://github.com/lvgl/lv_binding_rust" }
lvgl-sys = { git = "https://github.com/lvgl/lv_binding_rust" }
# gtk = { version = "0.17.1" }
sdl2 = { version = "0.35.2" }
# cstring = "0.1.1"
cstr_core = "0.2.4"
log4rs = "1.2.0"
log = "0.4.17"
yaml-rust = "0.4.5"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.1"
redis = "0.23.0"
chrono = "0.4.19"
rand = "0.8.4"
